@@ -78,8 +78,9 @@ Client library:
 - Rename C++ namespace from mosquittopp to mosqpp to remove ambiguity.
 - C++ lib_init(), lib_version() and lib_cleanup() are now in the mosqpp
   namespace directly, not mosquittopp class members.
-- The Python library has modified to match the libmosquitto changes and
-  simplified at the same time.
+- The Python library is now written in pure Python and so no longer depends on
+  libmosquitto. 
+- The Python library includes SSL support.
 - The Python library should now be compatible with Python 3.
 
 Other:
